fix(user-list): table hover effect and arrow button aligned

--- a/apps/optimal-human/src/styles.scss
+++ b/apps/optimal-human/src/styles.scss
@@ -399,3 +399,9 @@ table.mat-table {
   }
 }
 
+
+
+.mat-select-arrow
+{
+  margin-top: 6px !important;
+}
